--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="input-card">
                 <form id="form">
-                  <input type="text" name="Text" id="text">
+                  <input type="text" placeholder="Enter a value" id="text" autocomplete="off" required>
                   <button>Generate</button>  
                 </form>
             </div>
